<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    android:orientation="vertical"
    tools:context=".fragments.TrophyFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/trophy_result"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="128dp"
        android:layout_height="152dp"
        android:layout_gravity="center"
        android:layout_marginTop="128dp"
        android:src="@drawable/trophy"
        android:contentDescription="@string/trophy_imageText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/trophy_congrats"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTrophyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:text="Leonardo" />

    <TextView
        android:id="@+id/tvTrophyScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="Your score is 0 out of 10." />

    <Button
        android:id="@+id/btnTrophyFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/white"
        android:text="@string/trophy_btn_finish"
        android:textColor="@color/design_default_color_primary"
        android:textSize="16sp"
        android:paddingVertical="8dp"
        android:textStyle="bold" />

</LinearLayout>